syntax = "proto3";

// Dates and times
// https://docs.microsoft.com/en-us/aspnet/core/grpc/protobuf?view=aspnetcore-6.0#dates-and-times
import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";

// Nullable types
// https://docs.microsoft.com/en-us/aspnet/core/grpc/protobuf?view=aspnetcore-6.0#nullable-types
import "google/protobuf/wrappers.proto";

// Any
// https://docs.microsoft.com/en-us/aspnet/core/grpc/protobuf?view=aspnetcore-6.0#decimals
import "google/protobuf/any.proto";

// Value
// https://docs.microsoft.com/en-us/aspnet/core/grpc/protobuf?view=aspnetcore-6.0#value
import "google/protobuf/struct.proto";

package grpc_Demo.v1;

service Example {
  // Unary
  rpc UnaryCall (ExampleRequest) returns (ExampleResponse);

  // Server streaming
  rpc StreamingFromServer (ExampleRequest) returns (stream ExampleResponse);

  // Client streaming
  rpc StreamingFromClient (stream ExampleRequest) returns (ExampleResponse);

  // Bi-directional streaming
  rpc StreamingBothWays (stream ExampleRequest) returns (stream ExampleResponse);
}

message ExampleRequest {
  google.protobuf.Int32Value page_index = 1;
  int32 page_size = 2;
  bool is_descending = 3;
}

message ExampleResponse {
  string message = 1;
  google.protobuf.Timestamp start = 2;
  google.protobuf.Duration duration = 3;
  bytes payload = 4;
  repeated string roles = 5;
  map<string, string> attributes = 6;
  google.protobuf.Any detail = 7;
  oneof result {
    Success success = 8;
    Error error = 9;
  }
  google.protobuf.Value data = 10;
}

message Person {
  string first_name = 1;
  string last_name = 2;
}

message Success {
  string message = 1;
}

message Error {
  string message = 1;
}
